# speechtotext

./: pyproject.toml
speechtotext/: main.py
